[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fases/Porta.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GFX/PNG/Tiles/tile_463.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/PortaTrancada.gd" type="Script" id=3]
[ext_resource path="res://Assets/Interface/PainelNumerico.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Interface/PainelNumerico.tres" type="Theme" id=5]

[node name="PortaTrancada" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ImgPorta" parent="." index="1"]
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

[node name="PainelNumerico" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]
margin_right = 300.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="." index="5" groups=[
"Rotulo",
]]
visible = false
margin_left = 10.3276
margin_top = -70.307
margin_right = 50.3276
margin_bottom = -43.307
theme = ExtResource( 5 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_PortaTrancada_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PortaTrancada_body_exited"]
[connection signal="input_event" from="." to="." method="_on_PortaTrancada_input_event"]
[connection signal="combinacao_correta" from="CanvasLayer/PainelNumerico" to="." method="_on_PainelNumerico_combinacao_correta"]
